force-app/hfs-backend/main/default/objects/hfs_Program__c/hfs_Program__c.object-meta.xml
<CustomObject>
    <description>Configurable catalog of partner programs (DINOPAY Account, DINOREWARDS, Gas Buddy, Retail Excellence, Rebate Programs, ...). Admins add/retire programs as configuration.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>