force-app/hfs-backend/main/default/objects/hfs_Program__c/fields/hfs_Active__c.field-meta.xml
<CustomField>
    <fullName>hfs_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the program is offered. Inactive programs are never listed.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>