force-app/hfs-backend/main/default/objects/hfs_Program__c/fields/hfs_Destination_URL__c.field-meta.xml
<CustomField>
    <fullName>hfs_Destination_URL__c</fullName>
    <description>Site-relative destination for the program item.</description>
    <label>Destination URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>