force-app/hfs-backend/main/default/objects/hfs_Program__c/fields/hfs_Icon__c.field-meta.xml
<CustomField>
    <fullName>hfs_Icon__c</fullName>
    <description>SLDS icon token for the program row.</description>
    <label>Icon</label>
    <length>40</length>
    <type>Text</type>
</CustomField>