force-app/hfs-backend/main/default/objects/hfs_Program__c/fields/hfs_Program_Key__c.field-meta.xml
<CustomField>
    <fullName>hfs_Program_Key__c</fullName>
    <description>Unique key for the program (set to the program name/slug). Enforces one program per name so duplicate catalog rows cannot be created.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique key for this program (typically the program name). Must be unique across all programs.</inlineHelpText>
    <label>Program Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>