force-app/hfs-backend/main/default/objects/hfs_Program__c/fields/hfs_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>hfs_Sort_Order__c</fullName>
    <description>Display order in My Programs (ascending, nulls last).</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>