force-app/hfs-backend/main/default/objects/hfs_Program__c/validationRules/hfs_Program_Key_Matches_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>hfs_Program_Key_Matches_Name</fullName>
    <active>true</active>
    <description>Keeps the unique Program Key aligned with the Program Name so the uniqueness guard actually prevents duplicate program names.</description>
    <errorConditionFormula>LOWER(hfs_Program_Key__c) &lt;&gt; LOWER(Name)</errorConditionFormula>
    <errorDisplayField>hfs_Program_Key__c</errorDisplayField>
    <errorMessage>Program Key must match the Program Name (it is used to prevent duplicate programs).</errorMessage>
</ValidationRule>